--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GitHub Pages Directory",
-  "short_name": "GitHub Pages",
+  "name": "Ash Consoles",
+  "short_name": "Ash Consoles",
   "start_url": "./?source=pwa",
   "display": "standalone",
   "background_color": "#0f172a",
