--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     },
     {
-      "src": "/icon-180.png",
+      "src": "/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png"
     }
